<resources>
    <string name="module_user">module_user</string>

    <string name="login_text">登录</string>
    <string name="login_by_username_text">账号登录</string>
    <string name="other_login_method_text">其他登录方式</string>
    <string name="register_text">注册</string>

    <string name="username_hint">请输入用户名</string>
    <string name="password_hint">请输入密码</string>
    <string name="password_confirm_hint">请确认密码</string>

    <string name="user_setting_text">个人设置</string>


    <string name="me_text">我</string>

</resources>
