<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>

        <variable
            name="loginChooseVM"
            type="com.newx.user.vm.LoginChooseVM"></variable>
    </data>


    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_login_by_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/tv_login_by_username"
            android:layout_width="@dimen/standard_button_width"
            android:layout_height="@dimen/standard_button_height"
            android:layout_marginBottom="@dimen/dp_20"
            android:background="@drawable/round50red_border1white_selector"
            android:gravity="center"
            android:onClick="@{()->loginChooseVM.toByUsername()}"
            android:text="@string/login_by_username_text"
            android:textColor="@color/md_red_900"
            app:layout_constraintBottom_toTopOf="@+id/tv_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="@dimen/standard_button_width"
            android:layout_height="@dimen/standard_button_height"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@drawable/round50red_border1white_selector"
            android:gravity="center"
            android:onClick="@{()->loginChooseVM.toRegister()}"
            android:text="@string/register_text"
            android:textColor="@color/md_red_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_horizontal" />

        <TextView
            android:id="@+id/label_other_login_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/other_login_method_text"
            app:layout_constraintBottom_toTopOf="@+id/layout_other_login_method"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/layout_other_login_method"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginBottom="@dimen/dp_20"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"></LinearLayout>


    </android.support.constraint.ConstraintLayout>

</layout>